samples/_failures_safe/1761504081_be50f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc79aa25.c: In function ‘main’:
./samples/SAFE/__tmp_cc79aa25.c:145:9: error: expected ‘{’ at end of input
  145 |         struct
      |         ^~~~~~
./samples/SAFE/__tmp_cc79aa25.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cc79aa25.c:145:9: error: expected declaration or statement at end of input
